--- a/Java基础/数组.md
+++ b/Java基础/数组.md
@@ -1,3 +1,4 @@
 # 数组在内存中的形式
+《疯狂Java讲义》 P95-P100
 实际的数组对象被存储在**堆（heap）内存**中；如果引用该数组对象的数组引用变量是一个局部变量，那么它被存储在**栈（stack）内存**中  
 [数组在内存中的存在形式](https://blog.csdn.net/tianjunjie520/article/details/81164629)
